# python_monitor

./: main.py  pyproject.toml
python_monitor/: pywinrm_monitor.py  wmi_monitor.py
